--- a/Mintlemonade/index.html
+++ b/Mintlemonade/index.html
@@ -10,6 +10,7 @@
 
             <div class="title">
                 <h2>CSS3 Shapes</h2>
+                <h4>Sample CSS3 Shapes Practice</h4>
             </div>
 
             <div >
