--- a/Mintlemonade/index.html
+++ b/Mintlemonade/index.html
@@ -13,7 +13,8 @@
                 <h4>Sample CSS3 Shapes Practice</h4>
             </div>
 
-            <div >
+            <div class="shapes">
+
             </div>
 
             <div >
