--- a/Mintlemonade/index.html
+++ b/Mintlemonade/index.html
@@ -14,6 +14,10 @@
             </div>
 
             <div class="shapes">
+                <div id="triangle"></div>
+                <div id="square"></div>
+                <div id="rectangle"></div>
+                <div id="circle"></div>
 
             </div>
 
