--- a/Mintlemonade/index.html
+++ b/Mintlemonade/index.html
@@ -14,10 +14,31 @@
             </div>
 
             <div class="shapes">
-                <div id="triangle"></div>
-                <div id="square"></div>
-                <div id="rectangle"></div>
-                <div id="circle"></div>
+                <div id="triangle">
+
+                </div>
+                <div id="square">
+                    <div id="thesquare">
+
+                    </div>
+
+                    <div id="namesquare">
+
+                    </div>
+
+                    <div id="descriptionsquare">
+
+                    </div>
+
+                </div>
+
+
+                <div id="rectangle">
+
+                </div>
+                <div id="circle">
+
+                </div>
 
             </div>
 
