--- a/Mintlemonade/index.html
+++ b/Mintlemonade/index.html
@@ -14,29 +14,31 @@
             </div>
 
             <div class="shapes">
-                <div id="triangle">
+                <div id="triangle">.
 
                 </div>
-                <div id="square">
+                <div id="square">.
                     <div id="thesquare">
 
                     </div>
 
                     <div id="namesquare">
+                        <h3>Square 1</h3>
 
                     </div>
 
                     <div id="descriptionsquare">
+                        <h5>This is a square done in CSS 3</h5>
 
                     </div>
 
                 </div>
 
 
-                <div id="rectangle">
+                <div id="rectangle">.
 
                 </div>
-                <div id="circle">
+                <div id="circle">.
 
                 </div>
 
