Creating the divisions for div rectangle in html

--- a/Mintlemonade/index.html
+++ b/Mintlemonade/index.html
@@ -17,7 +17,7 @@
                 <div id="triangle">.
 
                 </div>
-                <div id="square">.
+                <div id="square">
                     <div id="thesquare">
 
                     </div>
@@ -35,7 +35,18 @@
                 </div>
 
 
-                <div id="rectangle">.
+                <div id="rectangle">
+                    <div id="therect">
+
+                    </div>
+
+                    <div id="namerect">
+                        <h3>Square 1</h3>
+
+                    </div>
+
+                    <div id="descriptionrect">
+                        <h5>This is a square done in CSS 3</h5>
 
                 </div>
                 <div id="circle">.
