Creating the rectangle

--- a/Mintlemonade/index.html
+++ b/Mintlemonade/index.html
@@ -36,19 +36,16 @@
 
 
                 <div id="rectangle">
-                    <div id="therect">
-
+                    <div id="therectangle"></div>
+                    <div id="namerectangle">
+                        <h3>Rectangle 1</h3>
                     </div>
-
-                    <div id="namerect">
-                        <h3>Square 1</h3>
-
+                    <div id="descrectangle">
+                        <h5>This is a rectangle done in css 5</h5>
                     </div>
-
-                    <div id="descriptionrect">
-                        <h5>This is a square done in CSS 3</h5>
 
                 </div>
+
                 <div id="circle">.
 
                 </div>
