Creating the triangle.

--- a/Mintlemonade/index.html
+++ b/Mintlemonade/index.html
@@ -14,7 +14,14 @@
             </div>
 
             <div class="shapes">
-                <div id="triangle">.
+                <div id="triangle">
+                    <div id="thetriangle"></div>
+                    <div id="nametriangle">
+                        <h3>Triangle 1</h3>
+                    </div>
+                    <div id="descrtriangle">
+                        <h5>This is a triangle made in css 5</h5>
+                    </div>
 
                 </div>
                 <div id="square">
