Creating the circle

--- a/Mintlemonade/index.html
+++ b/Mintlemonade/index.html
@@ -48,12 +48,19 @@
                         <h3>Rectangle 1</h3>
                     </div>
                     <div id="descrectangle">
-                        <h5>This is a rectangle done in css 5</h5>
+                        <h5>This is a rectangle done in css 3</h5>
                     </div>
 
                 </div>
 
-                <div id="circle">.
+                <div id="circle">
+                    <div id="thecircle"></div>
+                    <div id="namecircle">
+                        <h3>Circle 1</h3>
+                    </div>
+                    <div>
+                        <h5>This is a circle done in css 3</h5>
+                    </div>
 
                 </div>
 
